<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".MusicRecognitionFragment"
    android:clipChildren="false"
    android:clipToPadding="false"
    >

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:padding="12dp"
        android:src="@drawable/ic_close"
        android:rotation="90"
        app:tint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tap_to_identify"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/recognitionContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="24dp" />

    <FrameLayout
        android:id="@+id/recognitionContainer"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <View
            android:id="@+id/pulseView1"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_gravity="center"
            android:background="@drawable/glow_circle"
            android:visibility="invisible" />

        <View
            android:id="@+id/pulseView2"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_gravity="center"
            android:background="@drawable/glow_circle"
            android:visibility="invisible" />

        <androidx.cardview.widget.CardView
            android:id="@+id/btnIdentify"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="#F38025"
            app:cardCornerRadius="100dp"
            app:cardElevation="12dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_search_music"
                app:tint="@android:color/white" />

        </androidx.cardview.widget.CardView>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/resultLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/recognitionContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:paddingHorizontal="24dp">

        <TextView
            android:id="@+id/tvResultTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_title_placeholder"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvResultArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist_name_placeholder"
            android:textColor="#B3FFFFFF"
            android:textSize="16sp"
            android:layout_marginTop="4dp"
            android:textAlignment="center" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPlayResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_now"
            android:layout_marginTop="16dp"
            app:cornerRadius="20dp"
            app:backgroundTint="@android:color/white"
            android:textColor="@android:color/black" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
